--- a/index.html
+++ b/index.html
@@ -42,7 +42,14 @@
             </div>
     </header>
     <main>
-      
+      <div class="container-fluid d-flex justify-content-center align-items-center mt-4">
+        <div class="grid">
+
+        </div>
+      </div>
+      <div class="info">
+      <p class="text-center fs-3">Seleziona un livello di difficoltà e gioca!</p>
+    </div>
     </main>
     <footer>
 
