--- a/index.html
+++ b/index.html
@@ -31,19 +31,21 @@
             <div class="right d-flex align-items-center">
 
                 <div class="input-group">
-                    <select class="form-select" id="inputGroupSelect04" aria-label="Example select with button addon">
-                        <option selected>Choose...</option>
-                        <option value="1">One</option>
-                        <option value="2">Two</option>
-                        <option value="3">Three</option>
+                    <label class="input-group-text">Difficoltà</label>
+
+                    <select class="form-select">
+
+                        <option selected value="easy">Facile</option>
+                        <option value="medium">Medio</option>
+                        <option value="hard">Difficile</option>
                     </select>
-                    <button class="btn btn-outline-secondary" type="button">Button</button>
+                    <button class="btn btn-outline-secondary" id="play-button" type="button">Gioca</button>
                 </div>
             </div>
     </header>
     <main>
       <div class="container-fluid d-flex justify-content-center align-items-center mt-4">
-        <div class="grid d-flex flex-wrap justify-content-start">
+        <div class="grid mt-5 d-flex flex-wrap justify-content-start">
             <div class="square"><div class="innersquare">1</div></div>
             <div class="square">2</div>
 
