--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
             </div>
     </header>
     <main>
-      <div class="container-fluid d-flex justify-content-center align-items-center mt-4">
-        <div class="grid mt-5 d-flex flex-wrap justify-content-start">
-       
+        <div class="container-fluid d-flex justify-content-center align-items-center mt-4">
+            <div class="grid mt-3 d-flex flex-wrap justify-content-start">
 
 
+
+            </div>
         </div>
-      </div>
-      <div class="info">
-      <p class="text-center fs-3">Seleziona un livello di difficoltà e gioca!</p>
-    </div>
+        <div class="info">
+            <p class="text-center fs-3 mt-4">Seleziona un livello di difficoltà e gioca!</p>
+        </div>
     </main>
     <footer>
 
