Added checkBombs function

--- a/index.html
+++ b/index.html
@@ -52,17 +52,18 @@
             </div>
         </div>
         <div class="info">
-            <p class="text-center fs-3 mt-4">Seleziona un livello di difficoltà e gioca!</p>
+            <p id="info-text" class="text-center fs-3 mt-4">Seleziona un livello di difficoltà e gioca!</p>
         </div>
     </main>
-    <footer>
-
+    <footer class="d-flex align-items-center">
+    <h2 class="text-white">CampoMinato SRL</h2>
     </footer>
 
-
+ 
 
 
     <script src="js/script.js"></script>
+    <script src="js/utility.js"></script>
 </body>
 
 </html>
