Added endgame functions and track score

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <div class="container-fluid d-flex justify-content-between">
+        <div class="container-lg d-flex justify-content-between">
             <div class="left d-flex">
                 <div class="d-flex justify-content-start align-items-center">
                     <div class="logo">
@@ -44,7 +44,7 @@
             </div>
     </header>
     <main>
-        <div class="container-fluid d-flex justify-content-center align-items-center mt-4">
+        <div class="container-lg d-flex justify-content-center align-items-center mt-4">
             <div class="grid mt-3 d-flex flex-wrap justify-content-start">
 
 
@@ -52,11 +52,13 @@
             </div>
         </div>
         <div class="info">
-            <p id="info-text" class="text-center fs-3 mt-4">Seleziona un livello di difficoltà e gioca!</p>
+            <p id="info-text" class="text-center fs-3 mt-2">Seleziona un livello di difficoltà e gioca!</p>
         </div>
     </main>
     <footer class="d-flex align-items-center">
-    <h2 class="text-white">CampoMinato SRL</h2>
+        <div class="container-lg">
+    <h2 class="text-white fs-5 ms-5">Made with functions by Raffaele Capaldo</h2>
+</div>
     </footer>
 
  
@@ -67,3 +69,5 @@
 </body>
 
 </html>
+
+
