--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div class="input-group">
                     <label class="input-group-text">Difficoltà</label>
 
-                    <select class="form-select">
+                    <select id="selectform" class="form-select">
 
                         <option selected value="easy">Facile</option>
                         <option value="medium">Medio</option>
@@ -45,7 +45,7 @@
     </header>
     <main>
         <div class="container-lg d-flex justify-content-center align-items-center mt-4">
-            <div class="grid mt-3 d-flex flex-wrap justify-content-start">
+            <div class="grid mt-3 d-flex flex-wrap justify-content-center align-items-center">
 
 
 
@@ -66,6 +66,9 @@
 
     <script src="js/script.js"></script>
     <script src="js/utility.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
